chore(config): added 3 db's | mongo, mysql, postgre | runs in docker

--- a/typeorm/inventory/package.json
+++ b/typeorm/inventory/package.json
@@ -13,18 +13,20 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "devDependencies": {
-    "@types/node": "^24.7.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
-    "ts-node-dev": "^2.0.0"
+    "@types/node": "^24.7.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongodb": "^6.20.0",
+    "mysql2": "^3.15.2",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "0.3.27",
-    "pg": "^8.14.1"
+    "typeorm": "0.3.27"
   }
 }
