--- a/typeorm/inventory/.env
+++ b/typeorm/inventory/.env
@@ -2,7 +2,23 @@ NODE_ENV=development
 PORT=5000
 
 POSTGRES_PORT=5432
-POSTGRES_HOST=db
+POSTGRES_HOST=postgres
 POSTGRES_USER=root
 POSTGRES_PASSWORD=secret
 POSTGRES_DB=inventory
+
+
+MYSQL_PORT=3306
+MYSQL_HOST=mysql
+MYSQL_USERNAME=user
+MYSQL_PASSWORD=secret
+MYSQL_DB=inventory
+
+MONGO_PORT=27017
+MONGO_HOST=mongo
+MONGO_USER=root
+MONGO_PASSWORD=secret
+MONGO_DB=inventory
+
+
+
