--- a/typeorm/inventory/docker-compose.yml
+++ b/typeorm/inventory/docker-compose.yml
@@ -12,18 +12,51 @@ services:
       - .:/app
     command: pnpm run dev
     depends_on:
-      - db
+      - postgres
+      - mysql
+      - mongo
 
-  db:
-    container_name: inventory-db
+  postgres:
+    container_name: inventory-postgres
     image: postgres:15
     restart: always
     env_file:
       - .env
-
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  mysql:
+    container_name: inventory-mysql
+    image: mysql:8
+    restart: always
+    env_file:
+      - .env
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DB}
+    ports:
+      - "${MYSQL_PORT}:${MYSQL_PORT}"
+    volumes:
+      - mysqldata:/var/lib/mysql
+
+  mongo:
+    container_name: inventory-mongo
+    image: mongo:7.0
+    restart: always
+    env_file:
+      - .env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+      - MONGO_INITDB_DATABASE=${MONGO_DB}
+    ports:
+      - "${MONGO_PORT}:${MONGO_PORT}"
+    volumes:
+      - mongodata:/data/db
+
 volumes:
   pgdata:
+  mysqldata:
+  mongodata:
