--- a/typeorm/inventory/docker-compose.yml
+++ b/typeorm/inventory/docker-compose.yml
@@ -1,13 +1,24 @@
 services:
+  nginx:
+    image: nginx:latest
+    container_name: inventory-nginx
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
+    restart: always
+
   app:
     container_name: inventory-app
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     env_file:
       - .env
     ports:
-      - "5000:5000"
+      - "1234:5000"
     volumes:
       - .:/app
     command: pnpm run dev
