--- a/typeorm/inventory/nginx.conf
+++ b/typeorm/inventory/nginx.conf
@@ -6,7 +6,7 @@ http {
     server_name localhost;
    
     location /api { 
-      proxy_pass http://app:5000;
+      proxy_pass http://app:5000/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
