hotfix(yaml): tweak yaml | changed port

--- a/typeorm/inventory-ms/nginx.conf
+++ b/typeorm/inventory-ms/nginx.conf
@@ -2,12 +2,12 @@ events {}
 
 http {
   server {
-    listen 80;
+    listen 1000;
     server_name localhost;
     absolute_redirect off;
    
     location /api/ { 
-      proxy_pass http://app:5000;
+      proxy_pass http://inventory-app:5000;
       proxy_no_cache 1;
       proxy_cache_bypass 1;
       proxy_http_version 1.1;
