--- a/typeorm/library-ms/nginx.conf
+++ b/typeorm/library-ms/nginx.conf
@@ -2,11 +2,11 @@ events {}
 
 http {
   server {
-    listen 80;
+    listen 2000;
     server_name localhost;
    
-    location /api { 
-      proxy_pass http://app:5001/;
+    location /api/ { 
+      proxy_pass http://library-app:5000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
@@ -31,3 +31,4 @@ http {
 }
 
 }
+
