hotfix(conf): changed host and internal port

--- a/typeorm/library-ms/nginx.conf
+++ b/typeorm/library-ms/nginx.conf
@@ -4,6 +4,7 @@ http {
   server {
     listen 2000;
     server_name localhost;
+    absolute_redirect off;
    
     location /api/ { 
       proxy_pass http://library-app:5000;
