feat(containerization): shifts code to docker and run via nginx

--- a/prisma/scratch/postgres/Dockerfile
+++ b/prisma/scratch/postgres/Dockerfile
@@ -1,13 +1,23 @@
-FROM node:20
-
+FROM node:20 AS base
 WORKDIR /app
-
 COPY package.json pnpm-lock.yaml ./
-
 RUN npm install pnpm -g 
 
-RUN pnpm install --frozen-lockfile
 
+FROM base AS dev
+WORKDIR /app
 COPY . .
-
+RUN pnpm install
+EXPOSE 5000
 CMD ["pnpm", "run", "dev"]
+
+
+
+FROM base AS prod
+WORKDIR /app
+COPY . .
+RUN pnpm install --prod
+EXPOSE 5000
+CMD ["pnpm", "run", "start"]
+
+
